Source/WebKit2/UIProcess/gtk/WebPreferencesGtk.cpp
@@ -41,6 +41,9 @@ void WebPreferences::platformInitializeStore()
         setAcceleratedCompositingEnabled(false);
     }
 #endif
+#if USE(COORDINATED_GRAPHICS_THREADED)
+    setForceCompositingMode(true);
+#endif
 #if !ENABLE(OPENGL)
     setAcceleratedCompositingEnabled(false);
 #else
